Overhaul on the add sequence to queue logic to simplify how jukebox requests are stored. This helped resolve the issue with manage PSA